# liquid-staking-referral-program

./: .editorconfig  .eslintignore  .eslintrc.js  .gitignore  .gitmodules  Anchor.toml  README.md  idl.json  package-lock.json  package.json  test.sh  tsconfig.json
client/: constants.ts  index.ts  marinade_referral.ts  setup_global_state.ts  setup_referral_state.ts  show_global_state.ts  util.ts
migrations/: deploy.ts
programs/marinade-referral/: .gitignore  Cargo.toml
programs/marinade-referral/src/: account_structs.rs  associated_token.rs  constant.rs  cpi_context_accounts.rs  cpi_context_instructions.rs  cpi_util.rs  error.rs  fees.rs  instructions.rs  lib.rs  processor.rs  states.rs  utils.rs
programs/marinade-referral/src/instructions/: admin.rs  common.rs  deposit_sol.rs  deposit_stake_account.rs  liquid_unstake.rs  mod.rs
programs/marinade-referral/src/processor/: process_change_authority.rs  process_claim_transfer.rs  process_create_referral_pda.rs  process_deposit.rs  process_deposit_stake_account.rs  process_init_referral_account.rs  process_initialize.rs  process_liquid_unstake.rs  process_pause.rs  process_request_transfer.rs  process_transfer_liq_shares.rs  process_transfer_liq_unstake_shares.rs  process_update.rs  process_update_authority.rs  process_update_partner.rs  process_update_referral.rs
programs/marinade-referral/tests/: Cargo.toml
programs/marinade-referral/tests/src/: initialize.rs  integration_test.rs  lib.rs
programs/marinade-referral/tests/src/integration_test/: delayed_unstake.rs  deposit_sol_liquid_unstake.rs  test_add_remove_liquidity.rs  test_admin.rs  test_delayed_unstake.rs  test_deposit_sol_liquid_unstake.rs  test_deposit_stake_account.rs  test_state_initialization.rs
programs/marinade-referrals/: Cargo.toml
programs/marinade-referrals/src/: constant.rs  error.rs  instructions.rs  lib.rs  processor.rs  states.rs  utils.rs
programs/marinade-referrals/src/processor/: process_initialize.rs
scripts/: deploy-devnet.sh  deploy-mainnet.sh  devnet-upgrade.sh  mainnet-upgrade.sh  test.sh  verify.sh
tests/: marinade-referral.ts  marinade-referrals.ts  test-admin.ts
