[package]
name = "marinade-referral"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "marinade_referral"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
anchor-debug = []

[dependencies]
anchor-lang = "0.14.0"
anchor-spl = "0.14.0"
solana-program = "1.7.11"
marinade-finance = { git = "https://github.com/marinade-finance/liquid-staking-program", features = ["no-entrypoint"] }
marinade-onchain-helper = { git = "https://github.com/marinade-finance/marinade-onchain-helper" }

# kept here even if it generates a warning
# in case this project is moved and/or compiled on its own
[profile.release]
overflow-checks = true
