[package]
name = "marinade-referral-tests"
version = "0.1.0"
description = "Integration tests for marinade-referral-program"
edition = "2018"

[dependencies]
rand = "0.7.3" # to be sync with solana keypairs
marinade-finance-offchain-sdk = { path = "../../../../marinade-anchor/sdk/offchain" }
#liquid-staking-onchain-sdk = { git = "https://github.com/marinade-finance/liquid-staking-onchain-sdk" }
#marinade-finance = { git = "https://github.com/marinade-finance/liquid-staking-program" }
solana-sdk = "1.7.11"
solana-program-test = "1.7.11"
spl-token = { version = "3.1", features = ["no-entrypoint"] }
tokio = { version = "1.5.0", features = ["macros"] }
log = "0.4.14"
env_logger = "0.8.3"
test-env-log = "0.2.7"
solana-vote-program = "1.7.11"
anyhow = "1.0.40"
bincode = "1.3.3"
rand_chacha = "0.2.2"
assert-json-diff = "2.0.1"
serde_json = "1.0.64"
lazy_static = "1.4.0"

[dependencies.futures]
version = "0.3"

[workspace]